Additional updates to the report.

--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -1,11 +1,16 @@
 @misc{3d_projection,
-  title        = {3D Projection},
-  howpublished = {\url{https://en.wikipedia.org/wiki/3D_projection}}
+  author = "{Wikipedia contributors}",
+  title = "3D projection --- {Wikipedia}{,} The Free Encyclopedia",
+  year = "2023",
+  howpublished = "\url{https://en.wikipedia.org/w/index.php?title=3D_projection&oldid=1148285432}",
+  note = "[Online; accessed 6-April-2023]"
 }
 
-@misc{ada,
-  title        = {NVIDIA ADA Science},
-  howpublished = {\url{https://images.nvidia.com/aem-dam/Solutions/geforce/ada/ada-lovelace-architecture/nvidia-ada-gpu-science.pdf}}
+@article{ada,
+  title = "{How Ada advances the science of graphics with DLSS 3.}",
+  author = "{Henry C Lin and  Andrew Burnes}",
+  year = "2022",
+  note = "[Online; accessed 2-May-2023]"
 }
 
 @misc{blinn,
@@ -95,9 +100,11 @@
   howpublished = {\url{https://opensource.org/license/mit/}}
 }
 
-@misc{rdna,
-  title        = {RDNA Architecture},
-  howpublished = {\url{https://www.amd.com/system/files/documents/rdna-whitepaper.pdf}}
+@article{rdna,
+  title = "{RDNA architecture - The all new Radeon gaming architecture powering ``Navi''}",
+  author = "{AMD}",
+  year = "2019",
+  note = "[Online; accessed 23-January-2023]"
 }
 
 @misc{render_man,
